# hydro-dispatch-rl

./: .gitignore  README.md  environment.yml  pyproject.toml
core/: __init__.py  hydrodispatchenv.py
training/: cartpole.ipynb  hydro_dispatch_env.ipynb  mdp_sketch.ipynb  synth_flow.ipynb  test_eco.ipynb  validation.ipynb  var_inflow_test.ipynb
